# am-project-msci-factors

./: .gitignore  MiMOMLOEWDecile.pickle  Project.ipynb  README.md  hello.py  pyproject.toml
backtester272/: Backtester.py  Result.py  StrategyBank.py
data/: benchmark.csv
